config-root/namespaces/jx-production/gohttp/gohttp-gohttp-deploy.yaml
# Source: gohttp/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gohttp-gohttp
  labels:
    draft: draft-app
    chart: "gohttp-0.0.5"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-production
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: gohttp-gohttp
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: gohttp-gohttp
    spec:
      serviceAccountName: gohttp-gohttp
      containers:
        - name: gohttp
          image: "gcr.io/domleartechtech/gohttp:0.0.5"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
