config-root/namespaces/jx-production/gohttp/gohttp-svc.yaml
# Source: gohttp/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gohttp
  labels:
    chart: "gohttp-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: gohttp-gohttp
